Working on getting Storybook and nativewind to play nice

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["cooklang"]
+  "cSpell.words": [
+    "cooklang",
+    "nativewind",
+    "ondevice",
+    "prestorybook",
+    "rnstl",
+    "tailwindcss"
+  ]
 }
