--- a/rn-app/package.json
+++ b/rn-app/package.json
@@ -1,22 +1,48 @@
 {
   "dependencies": {
+    "@cooklang/cooklang-ts": "^1.2.0",
     "expo": "^46.0.0",
+    "nativewind": "^2.0.10",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "@react-native-async-storage/async-storage": "^1.17.10"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@storybook/addon-actions": "^5.3",
+    "@storybook/addon-knobs": "^5.3",
+    "@storybook/addon-links": "^5.3",
+    "@storybook/addon-ondevice-actions": "^5.3.23",
+    "@storybook/addon-ondevice-knobs": "^5.3.26",
+    "@storybook/react-native": "^5.3.25",
+    "@storybook/react-native-server": "^5.3.23",
+    "@types/jest": "^29.0.1",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "jest": "^29.0.3",
+    "jest-expo": "^46.0.1",
+    "react-native-storybook-loader": "^2.0.5",
+    "react-test-renderer": "^18.2.0",
+    "tailwindcss": "^3.1.8",
+    "ts-jest": "^29.0.0",
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "start": "expo start",
+    "start": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest",
+    "prestorybook": "rnstl --pattern \"**/*.stories.tsx\"",
+    "start:storybook": "START_STORYBOOK_OVERRIDE=1 yarn start",
+    "storybook": "start-storybook -p 7007",
+    "build-storybook": "build-storybook"
   },
   "version": "1.0.0",
   "private": true,
