--- a/rn-app/package.json
+++ b/rn-app/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
     "@cooklang/cooklang-ts": "^1.2.0",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "expo": "^46.0.0",
     "nativewind": "^2.0.10",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
     "react-native-web": "~0.18.7",
-    "@react-native-async-storage/async-storage": "^1.17.10"
+    "ts-pattern": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
