--- a/rn-app/package.json
+++ b/rn-app/package.json
@@ -28,6 +28,7 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "jest": "^29.0.3",
     "jest-expo": "^46.0.1",
+    "metro-config": "^0.72.3",
     "react-native-storybook-loader": "^2.0.5",
     "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.1.8",
